--- a/app/src/main/res/layout/activity_monthly_salary.xml
+++ b/app/src/main/res/layout/activity_monthly_salary.xml
@@ -53,7 +53,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Let's Calculate Your Monthly Salary:"
+        android:text="Let's Calculate Your Yearly Salary:"
         android:textColor="#000000"
         android:textSize="18dp"
         android:textStyle="bold"
