--- a/app/src/main/res/layout/activity_bill_reminder.xml
+++ b/app/src/main/res/layout/activity_bill_reminder.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,25 +8,42 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/add_bill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_bill" />
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_centerHorizontal="true"
+        android:text="@string/add_bill"
+        android:textColor="#ffffff"
+        android:background="@drawable/rounded_button"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/Bills"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/bills" />
+        android:text="Recieve Monthly Notication\nAdd a bill for notification"
+        android:textColor="#ffffff"
+        android:textSize="28dp"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        android:background="#2D51A3"
+        android:textStyle="bold"
+        android:layout_below="@id/add_bill"/>
 
-    <ScrollView
+    <ListView
+        android:id="@+id/myList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_below="@id/Bills"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
-
-</LinearLayout>
+</RelativeLayout>
