--- a/app/src/main/res/layout/activity_bill_set.xml
+++ b/app/src/main/res/layout/activity_bill_set.xml
@@ -53,7 +53,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:visibility="visible">
+        android:visibility="visible"
+        android:layout_alignParentLeft="true">
 
         <Button
             android:id="@+id/billAdd"
