--- a/app/src/main/res/layout/activity_bill_reminder.xml
+++ b/app/src/main/res/layout/activity_bill_reminder.xml
@@ -20,6 +20,7 @@
         android:layout_centerHorizontal="true"
         android:text="@string/add_bill"
         android:textColor="#ffffff"
+        android:onClick="onClickAdd"
         android:background="@drawable/rounded_button"/>
 
     <TextView
@@ -44,6 +45,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:background="#228B22"
         android:layout_below="@id/Bills"/>
 
 </RelativeLayout>
