It's finished mostly, appearance and saving the goals needs to be done. The code is kind of unappealing to look at

--- a/app/src/main/res/layout/activity_savings_tracker.xml
+++ b/app/src/main/res/layout/activity_savings_tracker.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".SavingsTrackerActivity">
 
     <TextView
@@ -35,6 +35,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goalList" />
 
+
     <Button
         android:id="@+id/addGoal"
         android:layout_width="152dp"
@@ -46,7 +47,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <Button
         android:id="@+id/back"
